Use GLTFLoader instead of ColladaLoader in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <script src="js/three.min.js"></script>
 <script src="js/Reflector.js"></script>
-<script src="js/ColladaLoader.js"></script>
+<script src="js/GLTFLoader.js"></script>
 <script src="js/skin.js"></script>
 <script src="js/hero.js"></script>
 <script src="js/scroll.js"></script>
