Clean up overview -> features section transition

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
       <div class="featureTextPusher"></div>
     </div>
   </div>
+
+  <div class=gradient2></div>
 </div>
 
 <div class="row exokitFeatures pt-5" id="featuresParent">
