Add new global.js breakout

--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 <script src="js/Reflector.js"></script>
 <script src="js/GLTFLoader.js"></script>
 <script src="js/skin.js"></script>
+<script src="js/global.js"></script>
 <script src="js/hero.js"></script>
 <script src="js/features.js"></script>
 <script src="js/scroll.js"></script>
