cleanup contact page

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
 <div class="row contactSection pt-4">
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 pt-5 forms">
-        <h1>Need Help? Send Us a Message!</h1>
+        <h1>Send Us a Message</h1>
         <br>
         <form>
             <div class="row mt-4">
@@ -128,12 +128,7 @@
         </form>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-5">
-        <h1 class="pb-5">Come visit us.</h1>
-        <h3 class="font-weight-light">2576 Heather Sees Way</h3>
-        <h3 class="font-weight-light">Muskogee OK</h3>
-        <h3 class="font-weight-light">Oklahoma 74401</h3>
-        <br>
-        <h3 class="font-weight-light">+1(916)426-2556</h3>
+        <h1 class="pb-5">Contact Information</h1>
         <h3 class="font-weight-light">hello@webmr.io</h3>
     </div>
 </div>
