hyperlink Join Us text

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
         <h1>2018 Q4</h1>
         <h2 class="font-weight-light">Milestone 2.</h2>
         <br><br><br>
-        <h5>Join Us</h5>
+        <a href="contact.html" title="Contact Page"><h5>Join Us</h5></a>
         <br>
       </div>
 </div>
