add about.html hyperlink to about footer

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
           <a href="">
             <p class="font-weight-light">Careers</p>
           </a>
-          <a href="">
+          <a href="about.html">
             <p class="font-weight-light">About</p>
           </a>
         </div>
