--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <a href="">
             <p class="font-weight-light">Careers</p>
           </a>
-          <a href="">
+          <a href="about.html">
             <p class="font-weight-light">About</p>
           </a>
         </div>
