--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <p id="madeWithProject">Project: Aurora</p>
       </div>
       <div class="col-12">
-          <p id="madeWithYear">Year: 2018</p>
+          <p id="madeWithYear">Year 2018 - Now</p>
       </div>
     </div>
 
@@ -506,7 +506,7 @@ const changeCompany = (company) => {
       title.innerHTML = 'Active Theory';
       slogan.innerHTML = 'Active Theory is a studio building creative digital experiences. We are  pushing the future of web technology.';
       titleSub.innerHTML = 'Active Theory';
-      project.innerHTML = 'Project: xyz';
+      project.innerHTML = 'Project: XR Experiments';
       year.innerHTML = 'Year 2018 - Now';
 
     break;
