update Index info, was redundant

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
         <div class="featureTextPusher"></div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4">Run apps in Exokit</h1>
+        <h2 class="featureText pb-4">Cross-platform support with Exokit</h1>
         <h5 class="featureText text-left font-weight-light">
-          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.
+          Write your app once, export to run on any of Exokit's supported devices.
         </h5>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mt-4">
