fix twitch.tv link

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
             <div class="text-left pt-3 pb-3">
                 <a href="https://twitter.com/webmixedreality" title="Twitter"><i class="fab fa-twitter fa-2x mr-2 ml-1"></i></a>
                 <a href="https://github.com/modulesio" title="GitHub"><i class="fab fa-github fa-2x mr-2 ml-1"></i></a>
-                <a href="twitch.tv/avaer" title="Twitch.tv"><i class="fab fa-twitch fa-2x mr-2 ml-1"></i></a>
+                <a href="https://twitch.tv/avaer" title="Twitch.tv"><i class="fab fa-twitch fa-2x mr-2 ml-1"></i></a>
             </div>
             <p class="text-left">Adrian Biedrzycki is a Canada based Programmer who’s worked with Microsoft on the development of
               the SQL language and the compliers used to develop other SQL apps, he’s also developed a major part of the webflow platform. He’s been programming since the age of 6 and has a Bachelor’s degree in Computer Science from the University of Waterloo.</p>
