--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
   </div>
   <div class="verticalLine"></div>
   <div class="col-12 text-center pt-0 mt-0">
-    <h5 style="margin-bottom: 150px;">Get Started</h5>
+    <a href="docs/" title="Documentation"><h5 style="margin-bottom: 150px;">Get Started</h5></a>
   </div>
 </div>
 
