hide fake review section on index

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   </div>
 </div>
 
-<div class="row quotes pb-5">
+<div class="row quotes pb-5" style="display:none">
   <div class="col-12 quotesPusher pl-5 pb-5">
     <h1>Chatter #exokit</h1>
     <h4 class="font-weight-light">What are people saying about Exokit?</h5>
