update docs header link path

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body class="home" id="home">
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="index.html"><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
+  <a class="navbar-brand" href="."><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
   <div class="collapse navbar-collapse" id="bigNavbar">
     <div class="navbar-nav">
-      <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
+      <a class="nav-item nav-link pr-4 pl-4" href="docs/"><h5 class="font-weight-normal">Docs</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
       <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
@@ -33,7 +33,7 @@
         <h2 style="font-family: Bison;">Exokit</h2>
       </div>
       <div class="col-12 mb-4">
-        <a href="index.html"><h5>Home</h5></a>
+        <a href="."><h5>Home</h5></a>
       </div>
       <div class="col-12 mb-4">
         <a href="docs/"><h5 class="font-weight-light">Docs</h5></a>
@@ -238,7 +238,7 @@
             </div>
           </div>
         </div>
-    
+
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="featuresListCol">
           <div class="row">
             <div class="col-2">
