--- a/blog.html
+++ b/blog.html
@@ -20,13 +20,13 @@
         document.getElementById('expandedLittleNavbar').style.height = "0vh"
         document.getElementById('expandedLittleNavbar').style.visibility = "hidden"
     }
-</script> 
+</script>
 
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
 <a class="navbar-brand" href="index.html"><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
 <div class="collapse navbar-collapse" id="bigNavbar">
     <div class="navbar-nav">
-    <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="docs/"><h5 class="font-weight-normal">Docs</h2></a>
     <a class="nav-item nav-link pr-4 pl-4 active" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
@@ -208,6 +208,6 @@
     </div>
 </div>
 </footer>
-    
+
 </body>
 </html>
