--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         document.getElementById('expandedLittleNavbar').style.height = "0vh"
         document.getElementById('expandedLittleNavbar').style.visibility = "hidden"
     }
-</script>   
+</script>
 
 <script>
 
@@ -55,7 +55,7 @@
 <a class="navbar-brand" href="index.html"><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
 <div class="collapse navbar-collapse" id="bigNavbar">
     <div class="navbar-nav">
-    <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="docs/"><h5 class="font-weight-normal">Docs</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
     <a class="nav-item nav-link pr-4 pl-4 active" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
