--- a/index.html
+++ b/index.html
@@ -1071,14 +1071,15 @@ table tr {
 <body class="home" id="home">
 
 <header id=header>
-  <a href="https://browser.exokit.org">
+  <a href="https://exokit.org">
     <img class=icon src="logo.svg"/>
   </a>
-  <a href="/" class="nav" id="explore-dropdown">Exobrowser</a>
 
-  <a class="nav" id="explore-dropdown">Explore</a>
-  <a class="nav">Download</a>
-  <a class="nav" id="developers-dropdown">Developers<i class="fal fa-chevron-down"></i></a>
+  <a class="nav" id="explore-dropdown">Browser</a>
+  <a class="nav">Avatars</a>
+  <a class="nav">Builder</a>
+  <a class="nav">Land</a>
+  <a class="nav" id="developers-dropdown">Docs<i class="fal fa-chevron-down"></i></a>
 
   <!-- <div class="popdown" id="developers-popdown">
     <ul>
