--- a/index.html
+++ b/index.html
@@ -1170,13 +1170,13 @@ table tr {
   <a href="https://exokit.org">
     <img class=icon src="logo.svg"/>
   </a>
-  <a class="nav" id="explore-dropdown">Browser</a>
-  <a class="nav">Avatars</a>
-  <a class="nav">Builder</a>
-  <a class="nav">Land</a>
-  <a class="nav">P2P</a>
-  <a class="nav">Docs<i class="fal fa-chevron-down"></i></a>
-  <a class="button right" href="https://github.com/sponsors/modulesio">Sponsor on GitHub</a>
+  <a href="https://browser.exokit.org" class="nav" id="explore-dropdown">Browser</a>
+  <a href="https://avatars.exokit.org" class="nav">Avatars</a>
+  <a href="https://web.exokit.org" class="nav">Builder</a>
+  <a href="https://land.exokit.org" class="nav">Land</a>
+  <a href="https://multiplayer.exokit.org" class="nav">P2P</a>
+  <a href="https://docs.exokit.org" class="nav">Docs<i class="fal fa-chevron-down"></i></a>
+  <a href="https://github.com/sponsors/modulesio" class="button right">Sponsor on GitHub</a>
 </header>
 
 <canvas id=hero-canvas></canvas>
@@ -1199,31 +1199,31 @@ table tr {
     </div>
   </div>
   <div class=tiles>
-    <a href="#" class=tile>
+    <a href="https://browser.exokit.org" class=tile>
       <div class=wrap>
         <h3>Browser</h3>
         <i class="fas fa-layer-group"></i>
       </div>
     </a>
-    <a href="#" class=tile>
+    <a href="https://avatars.exokit.org" class=tile>
       <div class=wrap>
         <h3>Avatars</h3>
         <i class="fas fa-user-ninja"></i>
       </div>
     </a>
-    <a href="#" class=tile>
+    <a href="https://web.exokit.org" class=tile>
       <div class=wrap>
         <h3>Builder</h3>
         <i class="fas fa-tools"></i>
       </div>
     </a>
-    <a href="#" class=tile>
+    <a href="https://land.exokit.org" class=tile>
       <div class=wrap>
         <h3>Land</h3>
         <i class="fas fa-mountains"></i>
       </div>
     </a>
-    <a href="#" class=tile>
+    <a href="https://multiplayer.exokit.org" class=tile>
       <div class=wrap>
         <h3>P2P</h3>
         <i class="fas fa-user-headset"></i>
