More icons cleanup

--- a/index.html
+++ b/index.html
@@ -1201,16 +1201,17 @@ table tr {
     <div class="overlay-sub">
       <h4>Works on</h4>
       <div class=links>
-        <a href="https://get.webmr.io/mac" class="link i"><i class="fab heroDL fa-apple fa-2x p-2"></i></a>
-        <a href="https://get.webmr.io/linux" class="link i"><i class="fab heroDL fa-linux fa-2x p-2"></i></a>
-        <a href="https://get.webmr.io/windows" class="link i"><i class="fab heroDL fa-windows fa-2x p-2"></i></a>
-        <a href="https://get.webmr.io/magicleap" class="link img"><img src="media/oculus.svg"></a>
-        <a href="https://get.webmr.io/magicleap" class="link img"><img src="media/magicleap.svg"></a>
+        <div href="https://get.webmr.io/mac" class="link i"><i class="fab fa-apple"></i></div>
+        <div href="https://get.webmr.io/linux" class="link i"><i class="fab fa-linux"></i></div>
+        <div href="https://get.webmr.io/windows" class="link i"><i class="fab fa-windows"></i></div>
+        <div href="https://get.webmr.io/windows" class="link i"><i class="fab fa-steam"></i></div>
+        <div href="https://get.webmr.io/magicleap" class="link img"><img src="media/oculus.svg"></div>
+        <div class="link img"><img src="media/magicleap.svg"></div>
       </div>
     </div>
     <div class="overlay-sub">
       <h4>Open source</h4>
-      <a class=button href="https://github.com/webmixedreality/exokit">Github</a>
+      <a class=button href="https://github.com/exokitxr/exokit">Github</a>
     </div>
   </div>
   <div class=tiles>
