--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
     margin-top: 30vh;
     margin-left: 50px;
     width: 40vw; 
-    height: 100%;
+    /* height: 100%; */
     top: 0; 
     z-index: 2;
 }
