--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Exokit - Home</title>
+  <title>Metaverse toolkit - Exokit</title>
   <link rel="icon" href="media/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
