--- a/index.html
+++ b/index.html
@@ -1187,11 +1187,11 @@ table tr {
   <a href="https://exokit.org">
     <img class=icon src="logo.svg"/>
   </a>
-  <a href="https://browser.exokit.org" class="nav" id="explore-dropdown">Browser</a>
+  <a href="https://browser.exokit.org" class="nav" id="explore-dropdown">Home</a>
   <a href="https://avatars.exokit.org" class="nav">Avatars</a>
   <a href="https://web.exokit.org" class="nav">Builder</a>
   <a href="https://land.exokit.org" class="nav">Land</a>
-  <a href="https://multiplayer.exokit.org" class="nav">P2P</a>
+  <a href="https://multiplayer.exokit.org" class="nav">Rooms</a>
   <a href="https://docs.exokit.org" class="nav">Docs<i class="fal fa-chevron-down"></i></a>
   <a class="button right" href="https://github.com/exokitxr/exokit">View Source</a>
   <a href="https://github.com/sponsors/modulesio" class="button highlight">Sponsor on GitHub</a>
@@ -1219,7 +1219,7 @@ table tr {
   <div class=tiles>
     <a href="https://browser.exokit.org" class=tile>
       <div class=wrap>
-        <h3>Browser</h3>
+        <h3>Home</h3>
         <i class="fas fa-layer-group"></i>
       </div>
     </a>
@@ -1243,7 +1243,7 @@ table tr {
     </a>
     <a href="https://multiplayer.exokit.org" class=tile>
       <div class=wrap>
-        <h3>P2P</h3>
+        <h3>Rooms</h3>
         <i class="fas fa-user-headset"></i>
       </div>
     </a>
