--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@ table tr {
     <a href="https://browser.exokit.org" class=tile>
       <div class=wrap>
         <h3>Home</h3>
-        <i class="fas fa-layer-group"></i>
+        <i class="fas fa-warehouse-alt"></i>
       </div>
     </a>
     <a href="https://avatars.exokit.org" class=tile>
