Break out tiles from overlay container

--- a/index.html
+++ b/index.html
@@ -181,10 +181,9 @@ body {
     position: absolute;
     margin-top: 30vh;
     margin-left: 50px;
-    width: 40vw; 
+    width: 40vw;
     /* height: 100%; */
     top: 0; 
-    z-index: 2;
 }
 
 .home .heroDL:hover{
@@ -1098,6 +1097,11 @@ table tr {
 }
 .tiles {
   display: flex;
+  position: absolute;
+  margin-top: 30vh;
+  margin-left: 50px;
+  width: 40vw;
+  bottom: 50px;
 }
 .tiles .tile {
   position: relative;
@@ -1216,38 +1220,38 @@ table tr {
       </div>
     </div>
   </div>
-  <div class=tiles>
-    <a href="https://browser.exokit.org" class=tile>
-      <div class=wrap>
-        <h3>Home</h3>
-        <i class="fas fa-warehouse-alt"></i>
-      </div>
-    </a>
-    <a href="https://avatars.exokit.org" class=tile>
-      <div class=wrap>
-        <h3>Avatars</h3>
-        <i class="fas fa-user-ninja"></i>
-      </div>
-    </a>
-    <a href="https://web.exokit.org" class=tile>
-      <div class=wrap>
-        <h3>Builder</h3>
-        <i class="fas fa-tools"></i>
-      </div>
-    </a>
-    <a href="https://land.exokit.org" class=tile>
-      <div class=wrap>
-        <h3>Land</h3>
-        <i class="fas fa-mountains"></i>
-      </div>
-    </a>
-    <a href="https://multiplayer.exokit.org" class=tile>
-      <div class=wrap>
-        <h3>Rooms</h3>
-        <i class="fas fa-user-headset"></i>
-      </div>
-    </a>
-  </div>
+</div>
+<div class=tiles>
+  <a href="https://browser.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Home</h3>
+      <i class="fas fa-warehouse-alt"></i>
+    </div>
+  </a>
+  <a href="https://avatars.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Avatars</h3>
+      <i class="fas fa-user-ninja"></i>
+    </div>
+  </a>
+  <a href="https://web.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Builder</h3>
+      <i class="fas fa-tools"></i>
+    </div>
+  </a>
+  <a href="https://land.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Land</h3>
+      <i class="fas fa-mountains"></i>
+    </div>
+  </a>
+  <a href="https://multiplayer.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Rooms</h3>
+      <i class="fas fa-user-headset"></i>
+    </div>
+  </a>
 </div>
 
 <script src="https://kit.fontawesome.com/0735724151.js"></script>
